Add create success response

--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -1,6 +1,6 @@
 error Ein Fehler ist aufgetreten: %s
 
-create.permission Du hast nicht die nötigen Rechte um ein Quiz zu erstellen!
+create.success Quiz erfolgreich erstellt
 create.missing-voice Du musst in einem Sprachkanal sein, um ein Quiz zu starten!
 
 token.success = Login-Token: **```%s```**
