Fix message problems

--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -17,13 +17,13 @@ guess.button Antworten
 guess.footer Antowortrecht: %s
 
 guess.points.title Punkte
-guess.points.line %s: %s
-guess.points.line.current "%s": %s
-guess.points.line.ignore [%s]: %s
+guess.points.line [33m%s.[0m %s[0m: [34m%s[0m
+guess.points.line.current [33m%s.[32m %s[0m: [34m%s[0m
+guess.points.line.ignore [33m%s.[31m %s[0m: [34m%s[0m
 
 
+quiz.empty Keine Teilnehmer
 quiz.control Kontroll-Nachricht erneut senden
-quiz.invite Benutzer einladen
 quiz.stop Quiz beenden
 
 quiz.free Antwortrecht freigeben
