--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>de.mineking.musicquiz.main.Main</mainClass>
+                                    <mainClass>de.mineking.musicquiz.main.MusicQuiz</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
