Improve website handling

--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -26,7 +26,7 @@ quiz.empty Keine Teilnehmer
 quiz.control Kontroll-Nachricht erneut senden
 quiz.stop Quiz beenden
 
-quiz.free Antwortrecht freigeben
+quiz.correct Antwort bestätigen
 quiz.freeuser Nutzer freigeben
 quiz.freeall Alle freigeben
 quiz.add Punkt geben
