--- a/src/main/resources/CommandInfo.properties
+++ b/src/main/resources/CommandInfo.properties
@@ -1,5 +1,5 @@
-create Quiz erstellen
-create.file Datei mit den Aufgaben des Quiz
-token Login Token generieren
-volume Lautstärke ändern
-volume.volume Neue Lautstärke
+create=Quiz erstellen
+create.file=Datei mit den Aufgaben des Quiz
+token=Login Token generieren
+volume=Lautstärke ändern
+volume.volume=Neue Lautstärke
