--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -9,7 +9,7 @@ start.button=Quiz starten
 start.invalid=Du kannst das Quiz nicht kontrollieren!
 guess.text=Wenn du erraten hast, um welches Lied es sich handelt, kannst du den Knopf unter der Nachicht verwenden, um dir das Antwortrecht zu geben
 guess.button=Antworten
-guess.footer=Antowortrecht: %s
+guess.footer=Antwortrecht: %s
 guess.points.title=Punkte
 guess.points.line=[34m%s.[0m %s[0m: [33m%s[0m
 guess.points.line.current=[34m%s.[32m %s[0m: [33m%s[0m
