--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -4,10 +4,10 @@ create.missing-voice=Du musst in einem Sprachkanal sein, um ein Quiz zu starten!
 token.success=Login-Token: **```%s```**
 volume.success=Lautstärke auf **%s** geändert
 volume.missing=Kein Quiz das du moderierst gefunden!
-start.text=Das Quiz startet gleich! Sobald alle Teilnehmer den Sprachchat betreten haben kann der Game-Master den Start-Knopf dürcken...
+start.text=Das Quiz startet gleich! Sobald alle Teilnehmer den Sprachchat betreten haben kann der Game-Master den Start-Knopf drücken...
 start.button=Quiz starten
 start.invalid=Du kannst das Quiz nicht kontrollieren!
-guess.text=Wenn du erraten hast, um welches Lied es sich handelt, kannst du den Knopf unter der Nachicht verwenden, um dir das Antwortrecht zu geben
+guess.text=Wenn du erraten hast, um welches Lied es sich handelt, kannst du den Knopf unter der Nachricht verwenden, um dir das Antwortrecht zu geben
 guess.button=Antworten
 guess.footer=Antwortrecht: %s
 guess.points.title=Punkte
