Include master into member list

--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -12,6 +12,7 @@ guess.button=Antworten
 guess.footer=Antwortrecht: %s
 guess.points.title=Punkte
 guess.points.line=[34m%s.[0m %s[0m: [33m%s[0m
+guess.points.line.master=[36m%s[30m
 guess.points.line.current=[34m%s.[32m %s[0m: [33m%s[0m
 guess.points.line.ignore=[34m%s.[31m %s[0m: [33m%s[0m
 quiz.empty=Keine Teilnehmer
