--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -1,6 +1,6 @@
-error=Ein Fehler ist aufgetreten: %s
-create.success=Quiz erfolgreich erstellt
-create.missing-voice=Du musst in einem Sprachkanal sein, um ein Quiz zu starten!
+error=An error occurred: %s
+create.success=Successfully created quiz
+create.missing-voice=You have to be in a voice channel to create a quiz!
 token.success=Login-Token: **```%s```**
-volume.success=Lautstärke auf **%s** geändert
-volume.missing=Kein Quiz das du moderierst gefunden!
+volume.success=Volume changed to **%s**
+volume.missing=No quiz found that you are moderating
