--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -2,5 +2,6 @@ error=An error occurred: %s
 create.success=Successfully created quiz
 create.missing-voice=You have to be in a voice channel to create a quiz!
 token.success=Login-Token: **```%s```**
+token.button=Login
 volume.success=Volume changed to **%s**
 volume.missing=No quiz found that you are moderating
