Improve token command and rename to login

--- a/src/main/resources/CommandInfo.properties
+++ b/src/main/resources/CommandInfo.properties
@@ -1,5 +1,5 @@
 create=Create a new music quiz
 create.file=File with the tracks for the quiz
-token=Generate a login token
+login=Login to the client website
 volume=Change volume
 volume.volume=The new volume
