--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -1,7 +1,9 @@
 error=An error occurred: %s
 create.success=Successfully created quiz
 create.missing-voice=You have to be in a voice channel to create a quiz!
-token.success=Login-Token: **```%s```**
-token.button=Login
+login.title=Login to the quiz
+login.success=You can either log in using this the button below or by manually entering the following login-token on **[this website](%s)**.
+login.token=Login-Token
+login.button=Login
 volume.success=Volume changed to **%s**
 volume.missing=No quiz found that you are moderating
