Add possibility to sae quiz state

--- a/src/main/resources/CommandInfo.properties
+++ b/src/main/resources/CommandInfo.properties
@@ -1,5 +1,6 @@
 create=Create a new music quiz
 create.file=File with the tracks for the quiz
+save=Saves the current state of the quiz
 login=Login to the client website
 volume=Change volume
 volume.volume=The new volume
