--- a/src/main/resources/Response.properties
+++ b/src/main/resources/Response.properties
@@ -1,4 +1,5 @@
 error=An error occurred: %s
+quiz.missing=No quiz found that you are moderating
 create.success=Successfully created quiz
 create.missing-voice=You have to be in a voice channel to create a quiz!
 login.title=Login to the quiz
@@ -6,4 +7,3 @@ login.success=You can either log in using this the button below or by manually e
 login.token=Login-Token
 login.button=Login
 volume.success=Volume changed to **%s**
-volume.missing=No quiz found that you are moderating
