--- a/src/main/resources/CommandInfo.properties
+++ b/src/main/resources/CommandInfo.properties
@@ -4,3 +4,5 @@ save=Saves the current state of the quiz
 login=Login to the client website
 volume=Change volume
 volume.volume=The new volume
+generate=Generate random quiz
+generate.size=Size of the quiz
