--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.walkyst</groupId>
+            <groupId>com.github.Walkyst</groupId>
             <artifactId>lavaplayer-fork</artifactId>
-            <version>1.3.99.2</version>
+            <version>ef07585</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.MineKing9534</groupId>
+            <artifactId>LavaSrc</artifactId>
+            <version>1a7bc4b</version>
+
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.freyacodes.lavalink</groupId>
+                    <artifactId>Lavalink-Server</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -94,6 +107,12 @@
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
             <version>5.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>se.michaelthelin.spotify</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>8.0.0</version>
         </dependency>
     </dependencies>
 </project>
